# connecto

./: README.md  pyproject.toml  requirements.txt
examples/ldap/: filter.py
examples/mongo/: filter.py
examples/sql/: filter.py
examples/yaml/: attributes.py  create.py  delete.py  reverse_ref.py  search.py  select.py  update.py
src/connecto/: attribute.py  connection.py  engine.py  error.py  item.py  item_filter.py  mapper.py  request.py  reverse_ref.py
src/connecto/ldap/: connection.py
src/connecto/mongo/: attribute.py  connection.py  engine.py  item.py  mapper.py  request.py
src/connecto/utils/: nested_data_path.py
src/connecto/yaml/: __init__.py  attribute.py  connection.py  engine.py  item.py  mapper.py  request.py
tests/: __init__.py
tests/test_connecto/: __init__.py  test_attribute.py  test_engine.py  test_reverse_ref.py
tests/test_connecto/test_engine/: __init__.py  operation_test_case.py  test_base.py  test_create.py  test_delete.py  test_save.py  test_search.py  test_select.py
tests/test_connecto/test_item/: __init__.py  test_base.py  test_create.py  test_delete.py  test_load.py  test_load_items.py  test_search.py  test_select.py  test_select_filter.py  test_select_request.py  test_update.py
tests/test_connecto/test_ldap/: test_item.py
tests/test_connecto/test_utils/: __init__.py  test_nested_data_path.py
tests/test_connecto/test_yaml/: __init__.py  test_create.py  test_delete.py  test_search.py  test_select.py  test_update.py
